<resources>
    <string name="app_name">Quizly</string>
    <string name="userName_hint">Nom d\'utilisateur</string>
    <string name="password_hint">Mot de passe</string>
    <string name="email_hint">Email (optionnel)</string>
    <string name="sign_in_text_btn">Se connecter</string>
    <string name="sign_up_text_btn">S\'inscrire</string>
    <string name="category_name_txt">Category name</string>
    <string name="category_image_description">L\'image de categorie</string>
    <string name="categories_title">Catégories</string>
    <string name="ranking_title">Classement</string>
    <string name="play_now_button">Joue maintenant!</string>
    <string name="temp_answer_a_txt">Answer A</string>
    <string name="temp_answer_c_txt">Answer C</string>
    <string name="temp_answer_d_txt">Answer D</string>
    <string name="temp_answer_b_txt">Answer B</string>
    <string name="txt_total_score">Score: 0</string>
    <string name="txt_total_questions">Réussi: 0 / 30</string>
    <string name="try_again_button">Réessayer</string>
    <string name="loading">Loading...</string>
    <string name="todo">TODO</string>
    <string name="todoo">TODO</string>
    <string name="name">Nom :</string>
    <string name="score">Score :</string>
    <string name="namee">Name</string>
    <string name="scoree">Score</string>
    <string name="categoryname">CategoryName</string>
    <string name="Prenom_hint">Prenom</string>
    <string name="specialite">Specialite :</string>
    <string name="filiere">Filière :</string>
    <string-array name="filiere">
        <item>Filiere</item>
        <item>TDI</item>
        <item>TRI</item>
        <item>TDM</item>
        <item>TSGE</item>
        <item>TMSIR</item>

    </string-array>


</resources>
