<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardElevation="4dp"
    >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edtNewUserName"
            android:hint="@string/userName_hint"
            android:textColorHint="@color/colorPrimary"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:met_baseColor="@color/colorPrimary"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/colorPrimary"
            app:met_singleLineEllipsis="true"/>
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edtNewPrenom"
            android:hint="@string/Prenom_hint"
            android:textColorHint="@color/colorPrimary"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:met_baseColor="@color/colorPrimary"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/colorPrimary"
            app:met_singleLineEllipsis="true"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edtNewPassword"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:textColorHint="@color/colorPrimary"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:met_baseColor="@color/colorPrimary"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/colorPrimary"
            app:met_singleLineEllipsis="true"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edtNewEmail"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/colorPrimary"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:met_baseColor="@color/colorPrimary"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/colorPrimary"
            app:met_singleLineEllipsis="true"/>
    </LinearLayout>

</androidx.cardview.widget.CardView>