<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".MainActivity">

    <ImageView
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo_hd"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_above="@id/wrap_login"
        android:contentDescription="@string/todo" />


    <RelativeLayout
        android:id="@+id/wrap_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        >

        <androidx.cardview.widget.CardView
            android:id="@+id/info_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="4dp"
            android:layout_margin="8dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/edtUserName"
                    android:hint="@string/userName_hint"
                    android:textColorHint="@color/colorPrimaryText"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="24sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:met_baseColor="@color/colorPrimaryText"
                    app:met_floatingLabel="highlight"
                    app:met_primaryColor="@color/colorPrimaryText"
                    app:met_singleLineEllipsis="true"/>

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/edtPassword"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"
                    android:textColorHint="@color/colorPrimaryText"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="24sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:met_baseColor="@color/colorPrimaryText"
                    app:met_floatingLabel="highlight"
                    app:met_primaryColor="@color/colorPrimaryText"
                    app:met_singleLineEllipsis="true"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_below="@+id/info_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal"
            tools:ignore="UnknownId"
            android:weightSum="2">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/btn_sign_up"
                android:text="@string/sign_up_text_btn"
                tools:ignore="ButtonStyle,Suspicious0dp" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/btn_sign_in"
                android:text="@string/sign_in_text_btn"
                tools:ignore="ButtonStyle,Suspicious0dp" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>