<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sinscrire"
    android:background="@drawable/login_background"
    >

    <androidx.cardview.widget.CardView
        android:id="@+id/info_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout"
        app:layout_constraintStart_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/edtNewUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/userName_hint"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:textSize="24sp"
                app:met_baseColor="@color/colorPrimary"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="@color/colorPrimary"
                app:met_singleLineEllipsis="true" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/edtNewPrenom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Prenom_hint"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:textSize="24sp"
                app:met_baseColor="@color/colorPrimary"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="@color/colorPrimary"
                app:met_singleLineEllipsis="true" />

            <Spinner
                android:id="@+id/edNewFiliere"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:entries="@array/filiere"
                android:hint="@string/Prenom_hint"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:textSize="24sp" />


            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/edtNewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:textSize="24sp"
                app:met_baseColor="@color/colorPrimary"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="@color/colorPrimary"
                app:met_singleLineEllipsis="true" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/edtNewEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:textSize="24sp"
                app:met_baseColor="@color/colorPrimary"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="@color/colorPrimary"
                app:met_singleLineEllipsis="true" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_marginTop="40dp"
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnSignUpp"
            android:layout_width="187dp"
            android:layout_height="61dp"
            android:layout_marginLeft="220dp"
            android:layout_marginTop="440dp"
            android:text="@string/sign_up_text_btn" />

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="187dp"
            android:layout_height="61dp"
            android:layout_marginTop="-60dp"
            android:layout_marginLeft="6dp"
            android:text="@string/sign_in_text_btn" />


    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="53dp"
        android:layout_marginLeft="53dp"
        android:layout_marginEnd="300dp"
        android:layout_marginRight="300dp"
        android:text="@string/sign_up_text_btn"
        android:textColor="#EC1505"
        android:textSize="30sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.596"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>