<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".GameOver">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:layout_centerInParent="true"
        android:padding="20dp">

        <LinearLayout
            android:id="@+id/btn_group"
            android:paddingTop="10dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt_total_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextIcons"
                android:text="@string/txt_total_score"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/txt_questions_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextIcons"
                android:text="@string/txt_total_questions"
                android:textSize="30sp" />

            <ProgressBar
                android:id="@+id/doneProgressBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"/>

            <Button
                android:id="@+id/btnTryAgain"
                android:layout_margin="8dp"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:background="@color/colorPrimary"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="@string/try_again_button"
                android:textColor="@color/colorTextIcons"
                android:textStyle="bold"
                android:theme="@style/myButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />





        </LinearLayout>

    </RelativeLayout>
</RelativeLayout>